# react-fastapi-aws

./: .gitignore  README.md  cache.db  pyproject.toml
fastapi-cloudwatch/: alembic.ini  cache.db  consumer.py  db_init.py  publisher.py  pyproject.toml  requirements.txt
fastapi-cloudwatch/migrations/: env.py
fastapi-cloudwatch/migrations/versions/: 54b79953d7b1_added_field_engine.py  8f97cd431741_db_enhancements.py  9f37d15f1615_first_commit.py  e50a128c62c0_alter_size_and_new_field_pending_.py  e7b79fd8894c_added_model_rds_monitor_cache.py  fc28f09a5d7a_added_field_account_name.py  fef66fcee3f9_added_fields_instance_identifier_and_.py
fastapi-cloudwatch/rest_service/: .env  __about__.py  __main__.py  celerybeat-schedule  logger.py  middlewares.py  model.py  router.py  schedulars.py  schema.py  settings.py  tasks.py
fastapi-cloudwatch/rest_service/api/: monitor.py
fastapi-cloudwatch/rest_service/app/: app.py  bootstrap.py  dependency.py
react-app/rds-monitor/: package-lock.json
react-app/rds-monitor/src/: App.css  App.js
react-app/rds-monitor/src/components/: Metrix.js  RDSMonitor.js
react-pp/react-app/rds-monitor/: package.json
react-pp/react-app/rds-monitor/src/: App.js
react-pp/react-app/rds-monitor/src/components/: Metrix.js  RDSMonitor.js
